--- a/style.css
+++ b/style.css
@@ -4,3 +4,13 @@
     display: flex;
     padding: 24px 0;
 }
+
+section1 {
+background-color: brown;
+padding: 100px;
+}
+
+section2 {
+    background-color: blue;
+    padding: 100px;
+}
